# dmabuffer_alloc_trace

./: .gitignore  CMakeLists.txt  README.md  build_android.sh  dma_alloc_hook.cpp  version_script.ld
aosp_file/: CMakeLists.txt
backtrace/: CMakeLists.txt
backtrace/driver/midgard/: mali_kbase_csf_ioctl.h  mali_kbase_ioctl.h
backtrace/driver/msm_ksgl/: msm_ksgl.h
backtrace/include/: Config.h  DebugData.h  PointerData.h  UnwindBacktrace.h  debug_disable.h  malloc_debug.h  memory_hook.h
backtrace/src/: Config.cpp  DebugData.cpp  PointerData.cpp  UnwindBacktrace.cpp  debug_disable.cpp  malloc_debug.cpp  memory_hook.cpp
backtrace_helper/: CMakeLists.txt
backtrace_helper/include/: MapData.h  backtrace.h  basic.h  helper.h  memory_hook.h
backtrace_helper/include/backtrace_helper/: backtrace.h
backtrace_helper/include/platform/bionic/: macros.h
backtrace_helper/include/private/: ErrnoRestorer.h
backtrace_helper/src/: MapData.cpp  backtrace.cpp  helper.cpp  memory_hook.cpp
src/: alloc_hook.cpp  checkleak.cpp  dma_alloc_hook.cpp  host_alloc_hook.cpp
tools/: merge_trace.py  template.html  word_statistics.py
tools/code_format/: clang-format  filter.sh  format_all.sh  format_check.sh  format_env.sh
unwindstack/: AndroidUnwinder.cpp  Demangle.cpp  DexFile.cpp  DexFile.h  DexFiles.cpp  DwarfDebugFrame.h  DwarfEhFrameWithHdr.cpp  DwarfMemory.cpp  DwarfOp.cpp  DwarfOp.h  Elf.cpp  ElfInterface.cpp  ElfInterfaceArm.h  Global.cpp  GlobalDebugImpl.h  Log.cpp  Maps.cpp  Memory.cpp  MemoryBuffer.h  MemoryRange.h  Regs.cpp  Symbols.cpp  ThreadEntry.cpp  ThreadUnwinder.cpp  Unwinder.cpp
unwindstack/android-base/: file.cpp  file.h  logging.h  macros.h
unwindstack/bionic/: mte.h  reserved_signals.h
unwindstack/cmake/: CMakeLists.txt
unwindstack/include/unwindstack/: AndroidUnwinder.h  Arch.h  DwarfSection.h  Elf.h  Error.h  Global.h  MapInfo.h  Unwinder.h  UserArm.h  UserArm64.h  UserMips.h  UserMips64.h  UserX86.h  UserX86_64.h
unwindstasck/: AndroidUnwinder.cpp  DwarfOp.cpp  Log.cpp  Memory.cpp  ThreadEntry.h
unwindstasck/include/unwindstack/: Error.h  Regs.h  RegsGetLocal.h
